# ClauseLens

./: .gitignore  13-clauselens.md  AGENTS.md  LICENSE  README.md  docker-compose.yml  skills-lock.json
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ai-service/: .gitignore  README.md  pyproject.toml
ai-service/scripts/: verify_metrics_endpoint.py
ai-service/src/: __init__.py
ai-service/src/analysis/: citation_validator.py  clause_analyzer.py  compare.py  confidence.py  obligation_extractor.py  redline_generator.py
ai-service/src/api/: app.py  guardrails.py  main.py
ai-service/src/models/: obligation.py  schemas.py
ai-service/src/telemetry/: __init__.py  metrics.py
ai-service/tests/: test_clause_analysis.py  test_confidence.py  test_eval_gates.py  test_obligation_extractor.py  test_redline_generator.py
backend/: .editorconfig  .gitignore  ClauseLens.sln
backend/src/ClauseLens.Api/: Program.cs  (+3 more)
docs/: CLIENT_OVERVIEW.md  CLIENT_PRESENTATION.md  LINKEDIN_PITCH.md
frontend/: .eslintrc.json  .gitignore  angular.json  package.json  project.ncl.toml
frontend/src/: index.html  main.ts  manifest.webmanifest  styles.scss
infra/docker/: ai-service.Dockerfile  backend.Dockerfile  frontend.Dockerfile  nginx.conf
infra/terraform/: main.tf
specs/001-contract-review-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation-report.md
(+118 files in other folders)
